--- a/CGPaсtice3/CGPaсtice3.csproj
+++ b/CGPaсtice3/CGPaсtice3.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Axes3D.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
